# openvino.genai

./: .gitignore  .gitmodules  0001-refactor-dflash-decouple-Qwen3-Omni-DFlash-from-Qwen.patch  CMakeLists.txt  bench_mtp.ps1  bench_qwen3.5_dflash.py  bench_qwen3.5_mtp.sh  bench_qwen3_omni_4b_cases.sh  bench_qwen3_omni_dflash.py  bench_qwen3_text_dflash.py  build_genai.sh  build_openvino_with_genai.sh  genai-build.sh  mtp-bench-test.sh  mtp_time_breakdown.ps1  pyproject.toml  run_qwen3_4b_dflash.sh
ov_ops_tests/: CMakeLists.txt
ov_ops_tests/cpp/: CMakeLists.txt  fused_mlp_test.cpp  moe_q41_moe3gemm_test.cpp  test_moe_layer.cpp
samples/cpp/module_genai/: .gitignore  CMakeLists.txt  README.md  build-module_geani.sh  load_image.cpp  load_image.hpp  main.cpp  md_image_generation.cpp  md_llm_chat.cpp  md_omni.cpp  md_video_generation.cpp  md_visual_language_chat.cpp  module_pipeline.cpp  private.hpp  ut_build.sh  ut_modules.cpp  ut_modules.sh  ut_modules_base.hpp  ut_pipelines.cpp  ut_pipelines.sh  ut_run.sh  utils.hpp  vision_encoder_build.sh  vision_encoder_run.sh
samples/cpp/module_genai/comfyui/: CMakeLists.txt
samples/cpp/module_genai/config_module/: config_textencodermodule.yaml
samples/cpp/module_genai/config_pipeline/: config_qwen2_5_vl.yaml
samples/cpp/module_genai/config_yaml/Qwen3-Omni/: config_prompt.yaml  config_prompt_audio_image.yaml  config_prompt_audio_image_video.yaml  config_prompt_audio_image_video_tts.yaml  config_prompt_audio_image_video_tts_int4.yaml  config_prompt_image.yaml  config_prompt_video.yaml
samples/cpp/module_genai/config_yaml/Qwen3.5/: config_llm.yaml  config_vl.yaml
samples/cpp/module_genai/config_yaml/Qwen3.5-0.8B/: config.yaml
samples/cpp/module_genai/ut_modules/: EmbeddingMergerModule.cpp  ImagePreprocesModule.cpp  LlmInferenceModule.cpp  TextEmbeddingModule.cpp  TextEncoderModule.cpp  VisionEncoderModule.cpp
samples/cpp/module_genai/ut_pipelines/Qwen2.5-VL-3B-Instruct/: config.yaml
samples/cpp/module_genai/ut_test_data/: embeds_metadata.txt  position_ids_metadata.txt
samples/cpp/module_genai/utils/: audio_utils.cpp  audio_utils.hpp  utils.cpp  utils.hpp  vision_utils.cpp  vision_utils.hpp
samples/cpp/qwen3_vl_modeling/: CMakeLists.txt  qwen3_vl_modeling.cpp
src/cpp/src/modeling/: CMakeLists.txt  README.md  builder_context.cpp  builder_context.hpp  module.cpp  module.hpp
src/cpp/src/modeling/layer/: lm_head.cpp  lm_head.hpp  parallel_lm_head.cpp  parallel_lm_head.hpp  rms_norm.cpp  rms_norm.hpp  vocab_embedding.cpp  vocab_embedding.hpp
src/cpp/src/modeling/layers/: lm_head.cpp  lm_head.hpp  rms_norm.cpp  rms_norm.hpp  vocab_embedding.cpp
src/cpp/src/modeling/models/: deepseek_ocr2_projector.cpp  deepseek_ocr2_projector.hpp  deepseek_ocr2_utils.cpp  deepseek_ocr2_utils.hpp  deepseek_qwen2_vision.cpp  deepseek_qwen2_vision.hpp  deepseek_sam_vit.cpp  deepseek_sam_vit.hpp  deepseek_v2_text.cpp  deepseek_v2_text.hpp  dflash_draft.cpp  dflash_draft.hpp  qwen3_dense.cpp  qwen3_dense.hpp  qwen3_dense_modular.cpp  qwen3_dense_modular.hpp  qwen3_dense_weights.hpp  qwen3_moe.cpp  qwen3_moe.hpp  qwen3_vl_fusion.cpp  qwen3_vl_fusion.hpp  qwen3_vl_input_planner.cpp  qwen3_vl_input_planner.hpp  qwen3_vl_spec.cpp  qwen3_vl_spec.hpp  qwen3_vl_text.cpp  qwen3_vl_text.hpp  qwen3_vl_utils.cpp  qwen3_vl_utils.hpp  qwen3_vl_vision.cpp  qwen3_vl_vision.hpp  qwen3_vl_vision_preprocess.cpp  qwen3_vl_vision_preprocess.hpp  smollm3.cpp  smollm3.hpp  wan_dit.cpp  wan_dit.hpp  wan_dit_layered.cpp  wan_dit_layered.hpp  wan_transformer3d.cpp  (+10 more)
src/cpp/src/modeling/models/deepseek_ocr2/: modeling_deepseek_ocr2_projector.cpp  modeling_deepseek_ocr2_projector.hpp  modeling_deepseek_qwen2_vision.cpp  modeling_deepseek_qwen2_vision.hpp  modeling_deepseek_sam_vit.cpp  modeling_deepseek_sam_vit.hpp  processing_deepseek_ocr2.cpp  (+1 more)
src/cpp/src/modeling/ops/: context.cpp  context.hpp  kv_cache.cpp  llm.cpp  llm.hpp  nn.cpp  nn.hpp  op_policy.hpp  ops.cpp  ops.hpp  rope.cpp  rope.hpp  shape.cpp  shape.hpp  tensor.cpp  tensor.hpp  tensor_ops.cpp  tensor_ops.hpp
src/cpp/src/modeling/samples/: CMakeLists.txt  extract_video_frames.cpp  modeling_deepseek_ocr2.cpp  modeling_dflash.cpp  modeling_glm_ocr.cpp  modeling_qwen3_5.cpp  modeling_qwen3_5_dflash.cpp  modeling_qwen3_asr.cpp  modeling_qwen3_omni.cpp  modeling_qwen3_omni_dflash.cpp  modeling_qwen3_omni_tts_min.cpp  modeling_qwen3_tts.cpp  modeling_qwen3_vl.cpp  modeling_wan_layered_dit.cpp  modeling_wan_t2v.cpp  modeling_zimage.cpp  quantization_utils.hpp  test_wan_layered_dit_ir_model.py
src/cpp/src/modeling/tests/: deepseek_ocr2_config_test.cpp  deepseek_ocr2_packager_test.cpp  deepseek_ocr2_preprocess_test.cpp  deepseek_ocr2_projector_test.cpp  deepseek_ocr2_prompt_test.cpp  deepseek_qwen2_vision_test.cpp  deepseek_sam_vit_test.cpp  deepseek_v2_moe_test.cpp  deepseek_v2_text_dummy_test.cpp  dflash_attention_test.cpp  dflash_draft_dummy_test.cpp  dflash_draft_infer_test.cpp  dflash_rope_tail_test.cpp  dflash_utils_test.cpp  llm_ops_test.cpp  lm_head_test.cpp  ops_nn_test.cpp  ops_test.cpp  parallel_lm_head_test.cpp  qwen3_5_attention_test.cpp  qwen3_5_cache_test.cpp  qwen3_5_dummy_e2e_smoke_test.cpp  qwen3_5_dummy_int4_binding_test.cpp  qwen3_5_dummy_weight_source_test.cpp  qwen3_5_linear_attention_op_compare_test.cpp  qwen3_5_linear_attention_test.cpp  qwen3_5_moe_config_test.cpp  qwen3_5_moe_core_test.cpp  qwen3_5_moe_dummy_e2e_smoke_test.cpp  qwen3_5_moe_dummy_int4_binding_test.cpp  qwen3_5_moe_weight_specs_test.cpp  qwen3_5_rope_test.cpp  qwen3_5_vlm_e2e_test.cpp  qwen3_asr_modeling_test.cpp  qwen3_attention_test.cpp  qwen3_dense_dummy_test.cpp  qwen3_mlp_test.cpp  qwen3_next_attention_test.cpp  qwen3_next_cache_test.cpp  qwen3_next_e2e_test.cpp  (+40 more)
src/cpp/src/modeling/weights/: quantization_config.cpp  quantization_config.hpp  quantization_selector.cpp  quantization_selector.hpp  synthetic_weight_source.cpp  synthetic_weight_source.hpp  weight_finalizer.hpp  weight_loader.cpp  weight_loader.hpp  weight_materializer.hpp  weight_parameter.cpp  weight_parameter.hpp  weight_source.hpp  weights.hpp
(+351 files in other folders)
